# nexa-os

./: .ci.yml  .gitignore  CHANGELOG.md  Cargo.toml  DNS-IMPLEMENTATION-SUMMARY.md  DNS-SESSION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  LICENSE  NRLIB_STD_IMPROVEMENTS.md  PANIC_FIX_SUMMARY.md  README.md  SLAB_FIX_SUMMARY.md  bochsrc.txt  build.rs  linker.ld  ndk  x86_64-nexaos-userspace-pic.json  x86_64-nexaos-userspace.json  x86_64-nexaos.json
boot/uefi-loader/: Cargo.toml
boot/uefi-loader/src/: lib.rs  main.rs
modules/: Cargo.toml
modules/ahci/: Cargo.toml
modules/ahci/src/: driver.rs  fis.rs  lib.rs  port.rs  regs.rs
modules/e1000/: Cargo.toml
modules/e1000/src/: lib.rs
modules/ext2/: Cargo.toml
modules/ext2/src/: lib.rs
modules/ext3/: Cargo.toml
modules/ext3/src/: lib.rs
modules/ext4/: Cargo.toml
modules/ext4/src/: extent.rs  inode.rs  journal.rs  lib.rs  ops.rs  superblock.rs
modules/ide/: Cargo.toml
modules/ide/src/: lib.rs
modules/kmod_api/: Cargo.toml
modules/kmod_api/src/: lib.rs
modules/nvme/: Cargo.toml
modules/nvme/src/: cmd.rs  controller.rs  driver.rs  lib.rs  queue.rs  regs.rs
modules/swap/: Cargo.toml
modules/swap/src/: lib.rs
modules/virtio_blk/: Cargo.toml
modules/virtio_blk/src/: lib.rs
nvm/: Cargo.toml  build-nvm.sh
nvm/.cargo/: config.toml
nvm/src/: api.rs  backup.rs  cluster.rs  cpu.rs  debugger.rs  executor.rs  hal.rs  lib.rs  memory.rs  migration.rs  monitoring.rs  network.rs  scheduler.rs  security.rs  storage.rs  svm.rs  tenant.rs  vm.rs  vmstate.rs  vmx.rs
nvm/src/auth/: ldap.rs  mod.rs  oauth2.rs  saml.rs  types.rs
nvm/src/cli/: client.rs  commands.rs  config.rs  mod.rs  output.rs  shell.rs  state.rs
nvm/src/db/: backend.rs  migrations.rs  mod.rs  models.rs  pool.rs  repository.rs
nvm/src/devices/: ioapic.rs  keyboard.rs  lapic.rs  mod.rs  pic.rs  pit.rs  rtc.rs  uart.rs  vga.rs
nvm/src/events/: audit.rs  bus.rs  mod.rs  persistence.rs  types.rs
nvm/src/firmware/: acpi.rs  bios.rs  font.rs  font_data.inc  manager.rs  mod.rs  smbios.rs  uefi.rs
nvm/src/ha/: failover.rs  fencing.rs  mod.rs  raft.rs  types.rs
nvm/src/hypervisor/: api.rs  cluster.rs  core.rs  manager.rs  mod.rs  network.rs  resources.rs  scheduler.rs  storage.rs
nvm/src/jit/: async_eviction.rs  async_restore.rs  async_runtime.rs  block_manager.rs  cache.rs  codegen.rs  compiler_s1.rs  compiler_s2.rs  decoder.rs  deopt.rs  escape.rs  eviction.rs  interpreter.rs  ir.rs  isa_opt.rs  loop_opt.rs  mod.rs  nready.rs  profile.rs  readynow.rs  scheduler.rs  scope.rs  scope_optimizer.rs  speculation.rs
nvm/src/licensing/: features.rs  mod.rs  types.rs  validator.rs
nvm/src/templates/: library.rs  mod.rs  ova.rs  types.rs
nvm/src/webgui/: assets.rs  auth.rs  console.rs  dashboard.rs  frontend.rs  middleware.rs  mod.rs  routes.rs  server.rs  templates.rs  websocket.rs
nvm/webui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nvm/webui/src/: App.vue
tests/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
tests/.cargo/: config.toml
tests/kernel/: Cargo.toml  build.rs
tests/kernel/src/: interrupts.rs  lib.rs  syscalls.rs  udrv.rs
tests/modules/: Cargo.toml
tests/modules/src/: ext3.rs  lib.rs
tests/nvm/: Cargo.toml
tests/nvm/src/: devices.rs  lib.rs
tests/src/: algorithms.rs  data_structures.rs  filesystem_tests.rs  lib.rs  memory_management.rs  mm.rs  mock.rs  posix.rs  process.rs  process_management.rs  process_tests.rs  scheduler_tests.rs  smp_scheduler_tests.rs  tests.rs
tests/src/algorithms/: bitmap.rs  checksum.rs  packet.rs  ring_buffer.rs
tests/src/boot/: mod.rs  stages.rs
tests/src/data_structures/: fixed_vec.rs  path.rs
tests/src/drivers/: keyboard.rs  random.rs  serial.rs  watchdog.rs
tests/src/fs/: comprehensive.rs  cpio.rs  cpio_edge_cases.rs  fd.rs  fd_edge_cases.rs  fd_limits.rs  mod.rs  vfs_edge_cases.rs
tests/src/fs_tests/: fstab.rs
tests/src/integration/: boot.rs  devices.rs  interrupt.rs  memory.rs  mod.rs  scheduler_smp.rs
tests/src/interrupts/: mod.rs  pic.rs
tests/src/ipc/: comprehensive.rs  futex.rs  futex_edge_cases.rs  mod.rs  pipe.rs  pipe_boundary.rs  pipe_buffer_tests.rs  pipe_edge_cases.rs  pipe_state_machine.rs  signal_advanced.rs  signal_bugs.rs  signal_comprehensive.rs  signal_edge_cases.rs  signal_race_conditions.rs  signal_state_machine.rs  socketpair.rs
tests/src/ipc_tests/: signal.rs
tests/src/kmod/: crypto.rs  mod.rs  taint.rs
tests/src/kmod_tests/: nkm.rs  pkcs7.rs
tests/src/mm/: brk_edge_cases.rs  buddy.rs  buddy_edge_cases.rs  mod.rs  paging.rs  paging_edge_cases.rs  slab.rs  vma.rs
tests/src/mock/: cpu.rs  filesystem.rs  hal.rs  ipc.rs  memory.rs  mod.rs  pci.rs  scheduler.rs  signal.rs  udrv.rs  vm.rs
tests/src/net/: comprehensive.rs  ipv4_validation.rs  mod.rs  netlink.rs  tcp_edge_cases.rs  tcp_header.rs
tests/src/net_tests/: arp.rs  mod.rs
tests/src/process/: comprehensive.rs  context.rs  context_switch.rs  elf_loader.rs  fork.rs  memory_constants_validation.rs  memory_layout_bugs.rs  memory_stress.rs  mod.rs  pid_edge_cases.rs  pid_tree.rs  pid_tree_edge_cases.rs  state.rs  state_machine.rs  state_machine_validation.rs  thread.rs
tests/src/safety/: mod.rs  x86.rs
tests/src/scheduler/: consistency.rs  deep_responsiveness_bugs.rs  eevdf.rs  eevdf_boundary.rs  eevdf_bugs.rs  mod.rs  (+24 more)
tests/userspace/: Cargo.toml
userspace/: Cargo.toml  crashtest.rs  dhcp.rs  dmesg.rs  getty.rs  init.rs  ip.rs  ld-nrlib.rs  login.rs  nslookup.rs  nurl.rs  pthread_test.rs  shell.rs  stub_libc.c  test_std.rs  thread_test.rs  uefi_compatd.rs
userspace/ld-nrlib/: Cargo.toml
userspace/ncryptolib/: Cargo.toml  build.rs
userspace/nexaos-libc/: Cargo.toml
userspace/nh2/: Cargo.toml  README.md  build.rs
userspace/nh3/: Cargo.toml  README.md
userspace/nhttp2/: Cargo.toml  build.rs
userspace/nrlib/: Cargo.toml  nrlib.ld
userspace/nssl/: Cargo.toml  build.rs
userspace/ntcp2/: Cargo.toml  README.md  build.rs
userspace/nzip/: Cargo.toml  build.rs
userspace/programs/: README.md
(+1061 files in other folders)
