[package]
name = "nexa-os"
version = "0.0.1"
edition = "2021"
description = "Production-grade hybrid-kernel operating system with full POSIX compliance and Linux ABI compatibility"
authors = ["nexa-sys <opensource@nexa.sys>"]
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
multiboot2 = { version = "0.24", default-features = false }
spin = "0.9"
uart_16550 = "0.3"
x86_64 = "0.15"
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
pic8259 = "0.10"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
font8x8 = { version = "0.3", default-features = false }

[build-dependencies]
cc = "1"
