[package]
name = "nexa-os"
version = "0.0.1"
edition = "2021"
description = "Production-grade hybrid-kernel operating system with full POSIX compliance and Linux ABI compatibility"
authors = ["nexa-sys <opensource@nexa.sys>"]
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

# =============================================================================
# Feature Flags
# =============================================================================
# These can be enabled/disabled via config/features.yaml or environment variables.
# Use FEATURE_xxx=true/false to override at build time.

[features]
default = ["net_full", "kernel_full", "fs_full", "gfx_full"]

# Network protocol stack features
net_full = ["net_ipv4", "net_udp", "net_tcp", "net_arp", "net_ethernet", "net_dns", "net_dhcp", "net_netlink"]
net_ipv4 = ["net_ethernet"]
net_udp = ["net_ipv4"]
net_tcp = ["net_ipv4"]
net_arp = ["net_ethernet"]
net_ethernet = []
net_dns = ["net_udp"]
net_dhcp = ["net_udp"]
net_netlink = []

# Kernel subsystem features
kernel_full = ["smp", "numa", "kmod", "kmod_signing"]
smp = []
numa = ["smp"]  # NUMA requires SMP
kmod = []
kmod_signing = ["kmod"]

# Graphics features
gfx_full = ["gfx_framebuffer", "gfx_ttf", "gfx_compositor"]
gfx_framebuffer = []
gfx_ttf = []  # TrueType font support
gfx_compositor = []  # Parallel display compositor

# Filesystem features
fs_full = ["fs_initramfs", "fs_devfs", "fs_procfs", "fs_sysfs"]
fs_initramfs = []
fs_devfs = []
fs_procfs = []
fs_sysfs = []

# Security features
security_stack_protector = []
security_aslr = []

# Debug features
debug_verbose = []
debug_memory = []
debug_net = []

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2

[dependencies]
multiboot2 = { version = "0.24", default-features = false }
spin = "0.9"
uart_16550 = "0.3"
x86_64 = "0.15"
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }
pic8259 = "0.10"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
font8x8 = { version = "0.3", default-features = false }
nexa_boot_info = { path = "boot/boot-info" }

[build-dependencies]
cc = "1"
