[package]
name = "nvm"
version = "2.0.0"
edition = "2021"
description = "NexaOS Virtual Machine - Enterprise-Grade Hypervisor Platform (like VMware/Hyper-V/Proxmox)"
authors = ["NexaOS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexa-sys/nexa-os"
keywords = ["virtualization", "hypervisor", "vm", "kvm", "vmware", "proxmox", "enterprise"]
categories = ["virtualization", "emulators", "hardware-support"]
readme = "README.md"

[features]
default = ["full"]
full = ["vtx", "amdv", "sdn", "monitoring", "backup", "distributed-storage", "multi-tenant", "webgui", "ha", "templates", "licensing"]

# Hardware Virtualization Support
vtx = []       # Intel VT-x emulation
amdv = []      # AMD-V (SVM) emulation

# Enterprise Features
sdn = []                    # Software Defined Networking
monitoring = []             # Monitoring and alerting
backup = []                 # Backup and disaster recovery
distributed-storage = []    # Distributed storage system
multi-tenant = []           # Multi-tenant management

# Enterprise Platform Features (new)
webgui = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio", "dep:hyper", "dep:askama", "dep:futures-util"]  # Web management interface
ha = []                     # High Availability / Fault Tolerance
templates = []              # VM template library
licensing = []              # Enterprise licensing
ldap = ["dep:ldap3"]        # LDAP/AD integration
oauth = []                  # OAuth2/OIDC support
saml = []                   # SAML SSO support

# Development features
tracing = ["dep:tracing", "dep:tracing-subscriber"]  # Detailed execution tracing

[dependencies]
# x86_64 hardware support
x86_64 = "0.15"

# Serialization (always enabled for enterprise features)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Web framework (for WebGUI)
axum = { version = "0.7", features = ["ws", "multipart"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "trace"], optional = true }
hyper = { version = "1.0", optional = true }
askama = { version = "0.12", optional = true }
futures-util = { version = "0.3", optional = true }

# Authentication
ldap3 = { version = "0.11", optional = true }
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"

# Tracing/Logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
log = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-channel = "0.5"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"

# Configuration
config = "0.14"

# CLI utilities
atty = "0.2"

# Archive handling
tar = "0.4"

# URL/path handling
urlencoding = "2.1"
dirs = "5.0"
hostname = "0.4"

# Logging
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.0"

[[bin]]
name = "nvmctl"
path = "src/bin/nvmctl.rs"
required-features = []

[[bin]]
name = "nvm-server"
path = "src/bin/nvm_server.rs"
required-features = ["webgui"]
