[package]
name = "nexa-os-tests"
version = "0.0.1"
edition = "2021"
description = "Unit tests for NexaOS kernel components"
publish = false
build = "build.rs"

# Unit tests for the kernel
# Uses build.rs to compile kernel source files directly (without no_std restrictions)
# Run with: cargo test (from this directory)

[lib]
path = "src/lib.rs"

[dependencies]
# Used by kernel code we're testing (spin::Mutex, etc.)
spin = "0.9"

[build-dependencies]
cc = "1.0"

[dev-dependencies]

# Coverage configuration (for cargo-llvm-cov)
[package.metadata.llvm-cov]
show-branch = true
include = ["../src/**/*.rs", "src/**/*.rs"]
