# =============================================================================
# NexaOS Test Suite - Workspace
# =============================================================================
# 统一测试框架，镜像被测代码结构
#
# 结构：
#   tests/kernel/     - 内核测试 (需要 build.rs 预处理)
#   tests/userspace/  - 用户空间测试 (nrlib, lib/*, programs/*)
#   tests/modules/    - 内核模块测试 (ext2, e1000, virtio_*)
#   tests/nvm/        - NVM 虚拟机平台测试

[workspace]
resolver = "2"
members = [
    "kernel",
    "userspace",
    "modules",
    "nvm",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
publish = false

[workspace.dependencies]
# 测试框架
serial_test = "3.1"
rusty-fork = "0.3.1"

# NVM 作为硬件模拟层
nvm = { path = "../nvm" }

# 被测代码依赖
spin = "0.9"
x86_64 = "0.15"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
