[workspace]
resolver = "2"

members = [
    "nrlib",
    "ld-nrlib",
    "ncryptolib",
    "nssl",
    "nh2",
    "nzip",
    "programs/init",
    "programs/shell",
    "programs/getty",
    "programs/login",
    "programs/nslookup",
    "programs/dhcp",
    "programs/ntpd",
    "programs/ip",
    "programs/nurl",
    "programs/dmesg",
    "programs/crashtest",
    "programs/thread_test",
    "programs/pthread_test",
    "programs/uefi_compatd",
    "programs/hello_dynamic",
    # Coreutils (split from shell builtins)
    "programs/ls",
    "programs/cat",
    "programs/stat",
    "programs/pwd",
    "programs/echo",
    "programs/uname",
    "programs/mkdir",
    "programs/whoami",
    "programs/users",
    "programs/clear",
    "programs/kill",
    "programs/grep",
    "programs/find",
    "programs/touch",
    "programs/rmdir",
    "programs/head",
    "programs/tail",
    "programs/killall",
    "programs/rm",
    "programs/cp",
    "programs/mv",
    "programs/wc",
    "programs/hostname",
    "programs/uptime",
    "programs/tee",
    "programs/date",
    "programs/sleep",
    "programs/env",
    "programs/id",
    # User management
    "programs/logout",
    "programs/adduser",
    # Power management
    "programs/reboot",
    "programs/shutdown",
    "programs/halt",
    "programs/poweroff",
    # Memory management
    "programs/swapon",
    "programs/swapoff",
    "programs/mkswap",
    "programs/free",
    # IPC utilities
    "programs/ipc-create",
    "programs/ipc-send",
    "programs/ipc-recv",
    # Test programs
    "programs/hashmap_test",
    # Editors
    "programs/edit",
    # Kernel module management
    "programs/lsmod",
    "programs/insmod",
    "programs/rmmod",
    "programs/modinfo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
nrlib = { path = "nrlib", default-features = false }
nexa_boot_info = { path = "../boot/boot-info" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
