[workspace]
resolver = "2"

members = [
    # ==========================================================================
    # Core Runtime Libraries (special - not in lib/)
    # ==========================================================================
    "nrlib",
    "ld-nrlib",

    # ==========================================================================
    # Shared Libraries (auto-discovered from lib/)
    # Libraries are organized in lib/ and auto-discovered by the build system.
    # Add new libraries by creating lib/<name>/ with a Cargo.toml that includes:
    #   [package.metadata.nexaos]
    #   output = "libname"  # output name without 'lib' prefix
    #   version = 3         # SO version number
    # ==========================================================================
    "lib/ncryptolib",
    "lib/nssl",
    "lib/nzip",
    "lib/nh2",
    "lib/nh3",
    "lib/ntcp2",

    # ==========================================================================
    # Core System Services (statically linked, boot-critical)
    # ==========================================================================
    "programs/core/init",
    "programs/core/getty",

    # ==========================================================================
    # Shell and User Authentication
    # ==========================================================================
    "programs/user/shell",
    "programs/user/login",
    "programs/user/logout",
    "programs/user/adduser",

    # ==========================================================================
    # Network Utilities
    # ==========================================================================
    "programs/network/nslookup",
    "programs/network/dhcp",
    "programs/network/ip",
    "programs/network/nurl",

    # ==========================================================================
    # System Daemons
    # ==========================================================================
    "programs/daemons/ntpd",
    "programs/daemons/uefi_compatd",

    # ==========================================================================
    # System Utilities
    # ==========================================================================
    "programs/system/dmesg",

    # ==========================================================================
    # Coreutils (POSIX standard utilities)
    # ==========================================================================
    "programs/coreutils/ls",
    "programs/coreutils/cat",
    "programs/coreutils/stat",
    "programs/coreutils/pwd",
    "programs/coreutils/echo",
    "programs/coreutils/uname",
    "programs/coreutils/mkdir",
    "programs/coreutils/whoami",
    "programs/coreutils/users",
    "programs/coreutils/clear",
    "programs/coreutils/kill",
    "programs/coreutils/grep",
    "programs/coreutils/find",
    "programs/coreutils/touch",
    "programs/coreutils/rmdir",
    "programs/coreutils/head",
    "programs/coreutils/tail",
    "programs/coreutils/killall",
    "programs/coreutils/rm",
    "programs/coreutils/cp",
    "programs/coreutils/mv",
    "programs/coreutils/wc",
    "programs/coreutils/hostname",
    "programs/coreutils/uptime",
    "programs/coreutils/tee",
    "programs/coreutils/date",
    "programs/coreutils/sleep",
    "programs/coreutils/env",
    "programs/coreutils/id",

    # ==========================================================================
    # Power Management
    # ==========================================================================
    "programs/power/reboot",
    "programs/power/shutdown",
    "programs/power/halt",
    "programs/power/poweroff",

    # ==========================================================================
    # Memory Management
    # ==========================================================================
    "programs/memory/swapon",
    "programs/memory/swapoff",
    "programs/memory/mkswap",
    "programs/memory/free",

    # ==========================================================================
    # IPC Utilities
    # ==========================================================================
    "programs/ipc/ipc-create",
    "programs/ipc/ipc-send",
    "programs/ipc/ipc-recv",

    # ==========================================================================
    # Editors
    # ==========================================================================
    "programs/editors/edit",

    # ==========================================================================
    # Kernel Module Management
    # ==========================================================================
    "programs/kmod/lsmod",
    "programs/kmod/insmod",
    "programs/kmod/rmmod",
    "programs/kmod/modinfo",

    # ==========================================================================
    # Test Programs (exclude from production builds)
    # ==========================================================================
    "programs/test/crashtest",
    "programs/test/thread_test",
    "programs/test/pthread_test",
    "programs/test/hello_dynamic",
    "programs/test/hashmap_test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
nrlib = { path = "nrlib", default-features = false }
nexa_boot_info = { path = "../boot/boot-info" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
