[package]
name = "nexa-uefi-loader"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "nexa-uefi-loader"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi = { version = "=0.28.0", default-features = false, features = ["alloc", "global_allocator", "logger", "panic_handler"] }
log = { version = "0.4", default-features = false }
nexa_boot_info = { path = "../boot-info" }
r-efi = { version = "5.3.0", default-features = false }
