[package]
name = "e1000-module"
version = "1.0.0"
edition = "2021"
description = "Intel E1000 network driver for NexaOS (loadable kernel module)"

[lib]
name = "e1000_module"
crate-type = ["staticlib"]  # Static library for kernel module (we extract .o from it)
path = "src/lib.rs"

[dependencies]

[profile.release]
panic = "abort"
opt-level = 2
lto = false  # Disable LTO for relocatable modules
codegen-units = 1

[profile.dev]
panic = "abort"
