[package]
name = "ext3-module"
version = "1.0.0"
edition = "2021"
description = "Third Extended Filesystem with journaling (ext3)"

[lib]
name = "ext3_module"
crate-type = ["staticlib"]  # Static library for kernel module (we extract .o from it)
path = "src/lib.rs"

# NexaOS module metadata - used by build system for auto-discovery
[package.metadata.nexaos]
type = "filesystem"
load_order = 11
output = "ext3.nkm"
depends = ["ext2"]
provides = ["ext3_fs"]

[package.metadata.nexaos.config]
journal_size = 0        # 0 = auto
journal_mode = "ordered"

[dependencies]
