[package]
name = "ext4-module"
version = "1.0.0"
edition = "2021"
description = "Fourth Extended Filesystem with extents (ext4)"

[lib]
name = "ext4_module"
crate-type = ["staticlib"]  # Static library for kernel module (we extract .o from it)
path = "src/lib.rs"

# NexaOS module metadata - used by build system for auto-discovery
[package.metadata.nexaos]
type = "filesystem"
load_order = 12
output = "ext4.nkm"
depends = ["ext3"]
provides = ["ext4_fs"]

[package.metadata.nexaos.config]
extents = true
dir_index = true
"64bit" = true

[dependencies]
