[package]
name = "swap-module"
version = "1.0.0"
edition = "2021"
description = "Swap Subsystem Driver"

[lib]
name = "swap_module"
crate-type = ["staticlib"]  # Static library for kernel module (we extract .o from it)
path = "src/lib.rs"

# NexaOS module metadata - used by build system for auto-discovery
[package.metadata.nexaos]
type = "memory"         # Module type: filesystem, block, network, memory
load_order = 3          # Load priority (lower = earlier)
output = "swap.nkm"
depends = []
provides = ["swap"]

# Module-specific configuration defaults
[package.metadata.nexaos.config]
auto_enable = false
swappiness = 60
max_swap_devices = 8
compression = false
compression_algo = "lz4"

[dependencies]
