[package]
name = "virtio-blk-module"
version = "1.0.0"
edition = "2021"
description = "VirtIO Block Device Driver"

[lib]
name = "virtio_blk_module"
crate-type = ["staticlib"]  # Static library for kernel module (we extract .o from it)
path = "src/lib.rs"

# NexaOS module metadata - used by build system for auto-discovery
[package.metadata.nexaos]
type = "block"          # Module type: filesystem, block, network, memory
load_order = 5          # Load priority (lower = earlier)
output = "virtio_blk.nkm"
depends = []
provides = ["virtio_blk"]

# Module-specific configuration defaults
[package.metadata.nexaos.config]
queue_depth = 128
multi_queue = true
block_size = 512

[dependencies]
