[package]
name = "nrlib"
version = "0.1.0"
edition = "2021"

[lib]
# rlib: Rust library format for Rust dependencies
# staticlib: Static library (libnrlib.a) for static linking as libc.a
# cdylib: Dynamic shared object (libnrlib.so) for dynamic linking as libc.so
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
panic = "abort"

[features]
default = ["panic-handler"]
panic-handler = []
std = []

[dependencies]
nexa_boot_info = { path = "../../boot/boot-info" }
